[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "lplb"
version = "0.1.0"
description = "Linear-programming-based expert parallelism load balancing."
authors = [{ name = "Huanqi Cao", email = "caohuanqi@deepseek.com" }]
dependencies = ["torch"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["setuptools", "wheel", "torch", "deep_ep"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["lplb"]

[tool.setuptools.package-data]
lplb = [
    "resources/csrc-tmpl/*",
    "resources/mathdx/lib/libcusolverdx.fatbin",
    "resources/mathdx/include/**/*",
    "resources/mathdx/external/**/*",
]

# Linter tools #################################################################

[tool.mypy]
python_version = "3.8"
exclude = ['^tests/.*\.py$']
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
no_site_packages = true

[tool.ruff]
target-version = "py38"
line-length = 100
output-format = "full"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",
    "W",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "C90",  # mccabe
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "EXE",  # flake8-executable
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots
    "TID",  # flake8-tidy-imports
    "TC",   # flake8-type-checking
    "NPY",  # numpy
    "PERF", # perflint
    "FURB", # refurb
    "TRY",  # tryceratops
    "RUF",  # ruff
]
ignore = [
    # E501: line too long
    # W505: doc line too long
    # too long docstring due to long example blocks
    "E501",
    "W505",
    # ANN401: dynamically typed expressions (typing.Any) are disallowed
    "ANN401",
    # S101: use of `assert` detected
    # internal use and may never raise at runtime
    "S101",
    # TRY003: avoid specifying long messages outside the exception class
    # long messages are necessary for clarity
    "TRY003",
    # COM812: avoid conflicts with Black formatter
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused-import
]
"tests/*" = [ # /* ensures it works for all subdirectories
    "INP001", # "implicit namespace package" is invalid for pytest
]

[tool.ruff.lint.isort]
known-local-folder = ["test"]
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
